--- a/oAutoru.html
+++ b/oAutoru.html
@@ -40,7 +40,7 @@
 						Moje ime je Marko Aleksić, rođen sam 10.11.2004. u Loznici.
 					</p>
 					<p>
-						Pohađao sam Gimnaziju "Vuk Karadžić". Trenutno sam na studijama u Beogradu na visokoj ICT, smer internet tehnologije.
+						Pohađao sam Gimnaziju "Vuk Karadžić". Trenutno sam na studijama u Beogradu na Visokoj ICT, smer internet tehnologije.
 					</p>
 					<p>
 						Volim da gledam serije i igram igrice.
