--- a/galerija.html
+++ b/galerija.html
@@ -29,20 +29,20 @@
 	</header>
 	<main class="main">
 		<h1 id="h1-galerija">Galerija</h1>
-		<div id="gallery">
-			<div class="wrapper gallery-row">
+		<div class="gallery wrapper">
+			<div class="gallery-row">
 				<img src="img/putovanje1.jpg" alt="plaza"/>
 				<img src="img/putovanje2.jpg" alt="planina i covek"/>
 			</div>
-			<div class="wrapper gallery-row">
+			<div class="gallery-row">
 				<img src="img/putovanje3.jpg" alt="palma"/>
 				<img src="img/putovanje4.jpg" alt="reka i planina"/>
 			</div>
-			<div class="wrapper gallery-row">
+			<div class="gallery-row">
 				<img src="img/putovanje5.jpg" alt="kolibe"/>
 				<img src="img/putovanje6.jpg" alt="planina i kuce"/>
 			</div>
-			<div class="wrapper gallery-row">
+			<div class="gallery-row">
 				<img src="img/putovanje7.jpg" alt="vodopad"/>
 				<img src="img/putovanje8.jpg" alt="jezero"/>
 			</div>
