--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							</ul>
 						</span>
 						<span>
-							<a href="prijava.html">Rezerviši ponudu!</a>
+							<a class="reserve" href="prijava.html">Rezerviši ponudu!</a>
 						</span>
 					</div>
 				</article>	
@@ -78,7 +78,7 @@
 							</ul>
 						</span>
 						<span>
-							<a href="prijava.html">Rezerviši ponudu!</a>
+							<a class="reserve" href="prijava.html">Rezerviši ponudu!</a>
 						</span>
 					</div>
 				</article>	
@@ -100,7 +100,7 @@
 							</ul>
 						</span>
 						<span>
-							<a href="prijava.html">Rezerviši ponudu!</a>
+							<a class="reserve" href="prijava.html">Rezerviši ponudu!</a>
 						</span>
 					</div>
 				</article>
@@ -117,7 +117,7 @@
 								<p>Fantastičan izbor za medeni mesec za mladence koji preferiraju zimu!</p>
 								<h5>Za cenu od 1300&euro; provedi se kao nikada pre!</h5>
 								<span>
-									<a href="prijava.html">Rezerviši odmah!</a>
+									<a class="reserve" href="prijava.html">Rezerviši odmah!</a>
 								</span>
 							</article>
 					</section>
