--- a/prijava.html
+++ b/prijava.html
@@ -33,31 +33,31 @@
                   <h2>Prijava za putovanje</h2>
                   <div class="formular-group">
                     <label for="ime">Ime:</label>
-                    <input class="formular-ime" type="text" id="ime" name="ime" placeholder="Ovde unesite Vaše ime" required>
+                    <input class="formular-input" type="text" id="ime" name="ime" placeholder="Ovde unesite Vaše ime" required>
                   </div>
                   <div class="formular-group">
                     <label for="prezime">Prezime:</label>
-                    <input class="formular-prezime" type="text" id="prezime" name="prezime" placeholder="Ovde unesite Vaše prezime" required>
+                    <input class="formular-input" type="text" id="prezime" name="prezime" placeholder="Ovde unesite Vaše prezime" required>
                   </div>
                   <div class="formular-group-email">
                     <label for="email">E-mail:</label>
-                    <input class="formular-email" type="email" id="email" name="email" placeholder="Ovde unesite Vaš E-mail" required>
+                    <input class="formular-input" type="email" id="email" name="email" placeholder="Ovde unesite Vaš E-mail" required>
                   </div>
                   <div class="formular-group">
                     <label for="telefon">Broj telefona:</label>
-                    <input class="formular-telefon" type="tel" id="telefon" name="telefon" placeholder="Ovde unesite Vaš broj telefona" required>
+                    <input class="formular-input" type="tel" id="telefon" name="telefon" placeholder="Ovde unesite Vaš broj telefona" required>
                   </div>
                   <div class="formular-group">
                     <label for="people">Broj osoba:</label>
-                    <input class="formular-people" type="text" id="people" name="people" placeholder="Ovde unesite broj osoba koje putuju" required/>
+                    <input class="formular-input" type="text" id="people" name="people" placeholder="Ovde unesite broj osoba koje putuju" required/>
                   </div>
                   <div class="formular-group">
                     <label for="people">Broj soba:</label>
-                    <input class="formular-sobe" type="text" id="sobe" name="sobe" placeholder="Ovde unesite broj soba" required/>
+                    <input class="formular-input" type="text" id="sobe" name="sobe" placeholder="Ovde unesite broj soba" required/>
                   </div>
                   <div class="room-kind">
                     <label for="vrsta-sobe">Izaberite vrstu sobe:</label>
-                    <select class="room-kind-select" id="vrsta-sobe" name="vrsta-sobe">
+                    <select class="formular-input" id="vrsta-sobe" name="vrsta-sobe">
                       <option value="0">Izaberite</option>
                       <option value="jednokrevetna">Jednokrevetna</option>
                       <option value="dvokrevetna">Dvokrevetna </option>
@@ -67,7 +67,7 @@
                   </div>
                   <div class="formular-group-putovanje">
                     <label  for="putovanje"> Izaberite putovanje:</label>
-                    <select class="formular-putovanje" id="putovanje" name="putovanje">
+                    <select class="formular-input" id="putovanje" name="putovanje">
                       <option value="0">Izaberite</option>
                       <option value="varsava">Putovanje u Varšavu </option>
                       <option value="moskva">Putovanje u Moskvu</option>
