--- a/oAutoru.html
+++ b/oAutoru.html
@@ -27,8 +27,9 @@
 			<a href="oAutoru.html">O autoru</a>
 		</nav>
 	</header>
-	<h1 id="about-author">O autoru</h1>
 	<main class="main">
+		<h1 id="about-author">O autoru</h1>
+
 		<div class="wrapper">
 			<div id="author-block">
 				
@@ -53,7 +54,7 @@
 			</div>
 	</div>
 	</main>
-	<footer>
+	<footer class="author-footer">
 		<div class="footer-navigation">
 			<nav>
 				<a href="index.html">Početna</a>
