--- a/galerija.html
+++ b/galerija.html
@@ -6,8 +6,8 @@
 		<meta name="author" content="mailto:marko.aleksic.72.23@ict.edu.rs"/>
 		<meta name="keywords" content="Putovanja,Specijali, Akcijska putovanja, Nova godina, izleti"/>
 		<meta name="description" content="Ovo je travel agencija Voyage Mark, raznovrsne ponude i destinacije, posetite nas!"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
-		<link rel="shortcut icon" type="image/png" href="img/logo.png"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+		<link rel="shortcut icon" type="image/png" href="assets/img/logo.png"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"/>
 		<script src="https://kit.fontawesome.com/58a9fd4715.js" crossorigin="anonymous"></script>
 	</head>
@@ -15,7 +15,7 @@
 	<header>		
 		<div id="logo">
 			<a href="index.html" >
-				<img class="logo-img" src="img/logo.png" alt="logo" /> 
+				<img class="logo-img" src="assets/img/logo.png" alt="logo" /> 
 			</a>
 		</div>
 		<nav>
@@ -31,20 +31,20 @@
 		<h1 id="h1-galerija">Galerija</h1>
 		<div class="gallery wrapper">
 			<div class="gallery-row">
-				<img src="img/putovanje1.jpg" alt="plaza"/>
-				<img src="img/putovanje2.jpg" alt="planina i covek"/>
+				<img src="assets/img/putovanje1.jpg" alt="plaza"/>
+				<img src="assets/img/putovanje2.jpg" alt="planina i covek"/>
 			</div>
 			<div class="gallery-row">
-				<img src="img/putovanje3.jpg" alt="palma"/>
-				<img src="img/putovanje4.jpg" alt="reka i planina"/>
+				<img src="assets/img/putovanje3.jpg" alt="palma"/>
+				<img src="assets/img/putovanje4.jpg" alt="reka i planina"/>
 			</div>
 			<div class="gallery-row">
-				<img src="img/putovanje5.jpg" alt="kolibe"/>
-				<img src="img/putovanje6.jpg" alt="planina i kuce"/>
+				<img src="assets/img/putovanje5.jpg" alt="kolibe"/>
+				<img src="assets/img/putovanje6.jpg" alt="planina i kuce"/>
 			</div>
 			<div class="gallery-row">
-				<img src="img/putovanje7.jpg" alt="vodopad"/>
-				<img src="img/putovanje8.jpg" alt="jezero"/>
+				<img src="assets/img/putovanje7.jpg" alt="vodopad"/>
+				<img src="assets/img/putovanje8.jpg" alt="jezero"/>
 			</div>
 		</div>
 	</main>
