--- a/ponude.html
+++ b/ponude.html
@@ -6,8 +6,8 @@
 		<meta name="author" content="mailto:marko.aleksic.72.23@ict.edu.rs"/>
 		<meta name="keywords" content="Putovanja, Specijali, Akcijska putovanja, Nova godina, izleti"/>
 		<meta name="description" content="Ovo je travel agencija Voyage Mark, raznovrsne ponude i destinacije, posetite nas!"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
-		<link rel="shortcut icon" type="image/png" href="img/logo.png"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+		<link rel="shortcut icon" type="image/png" href="assets/img/logo.png"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"/>
 		<script src="https://kit.fontawesome.com/58a9fd4715.js" crossorigin="anonymous"></script>
 	</head>
@@ -15,7 +15,7 @@
         <header>		
             <div id="logo">
                 <a href="index.html" >
-                    <img class="logo-img" src="img/logo.png" alt="logo" /> 
+                    <img class="logo-img" src="assets/img/logo.png" alt="logo" /> 
                 </a>
             </div>
             <nav>
@@ -34,7 +34,7 @@
                 <div class="offer">
                     <h3>Varšava - NOVOGODIŠNJI SPECIJAL</h3>
                     <div class="offer-img">
-                        <img src="img/varsava.jpg" alt="varsava"/>
+                        <img src="assets/img/varsava.jpg" alt="varsava"/>
                     </div>
                     <div class="offer-table">
                         <table>
@@ -110,7 +110,7 @@
                 <div class="offer">
                     <h3>Moskva - NOVOGODIŠNJI SPECIJAL</h3>
                     <div class="offer-img">
-                        <img src="img/moskva.jpg" alt="moskva"/>
+                        <img src="assets/img/moskva.jpg" alt="moskva"/>
                     </div>
                     <div class="offer-table">
                         <table>
@@ -196,7 +196,7 @@
                 <div class="offer">
                     <h3>Beč - NOVOGODIŠNJI SPECIJAL</h3>
                     <div class="offer-img">
-                        <img src="img/bec.jpg" alt="bec"/>
+                        <img src="assets/img/bec.jpg" alt="bec"/>
                     </div>
                     <div class="offer-table">
                         <table>
@@ -281,7 +281,7 @@
                 <div class="offer">
                     <h3>Madrid</h3>
                     <div class="offer-img">
-                        <img src="img/spanija.jpg" alt="madrid"/>
+                        <img src="assets/img/spanija.jpg" alt="madrid"/>
                     </div>
                     <div class="offer-table">
                         <table>
@@ -366,7 +366,7 @@
                 <div class="offer">
                     <h3>Bali - Specijalna ponuda</h3>
                     <div class="offer-img">
-                        <img src="img/bali.jpeg" alt="bali"/>
+                        <img src="assets/img/bali.jpeg" alt="bali"/>
                     </div>
                     <div class="offer-table">
                         <table>
@@ -466,7 +466,7 @@
                 <div class="offer">
                     <h3>Oslo - Nova Godina</h3>
                     <div class="offer-img">
-                        <img src="img/oslo.jpg" alt="oslo"/>
+                        <img src="assets/img/oslo.jpg" alt="oslo"/>
                     </div>
                     <div class="offer-table">
                         <table>
@@ -557,7 +557,7 @@
                 <div class="offer">
                     <h3>Amsterdam</h3>
                     <div class="offer-img">
-                        <img src="img/amsterdam.jpg" alt="amsterdam"/>
+                        <img src="assets/img/amsterdam.jpg" alt="amsterdam"/>
                     </div>
                     <div class="offer-table">
                         <table>
