--- a/prijava.html
+++ b/prijava.html
@@ -6,8 +6,8 @@
 		<meta name="author" content="mailto:marko.aleksic.72.23@ict.edu.rs"/>
 		<meta name="keywords" content="Putovanja, Specijali, Akcijska putovanja, Nova godina, izleti"/>
 		<meta name="description" content="Ovo je travel agencija Voyage Mark, raznovrsne ponude i destinacije, posetite nas!"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
-		<link rel="shortcut icon" type="image/png" href="img/logo.png"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+		<link rel="shortcut icon" type="image/png" href="assets/img/logo.png"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"/>
 		<script src="https://kit.fontawesome.com/58a9fd4715.js" crossorigin="anonymous"></script>
 	</head>
@@ -15,7 +15,7 @@
         <header>		
 			<div id="logo">
 				<a href="index.html" >
-					<img class="logo-img" src="img/logo.png" alt="logo" /> 
+					<img class="logo-img" src="assets/img/logo.png" alt="logo" /> 
 				</a>
 			</div>
 			<nav>
