--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="author" content="mailto:marko.aleksic.72.23@ict.edu.rs"/>
 		<meta name="keywords" content="Putovanja,Specijali, Akcijska putovanja, Nova godina, izleti"/>
 		<meta name="description" content="Ovo je travel agencija Voyage Mark, raznovrsne ponude i destinacije, posetite nas!"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
-		<link rel="shortcut icon" type="image/png" href="img/logo.png"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+		<link rel="shortcut icon" type="image/png" href="assets/img/logo.png"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"/>
 		<script src="https://kit.fontawesome.com/58a9fd4715.js" crossorigin="anonymous"></script>
 	</head>
@@ -15,7 +15,7 @@
 		<header>		
 			<div id="logo">
 				<a href="index.html" >
-					<img class="logo-img" src="img/logo.png" alt="logo" /> 
+					<img class="logo-img" src="assets/img/logo.png" alt="logo" /> 
 				</a>
 			</div>
 			<nav>
@@ -40,7 +40,7 @@
 				<h3>Novogodišnji specijal</h3>
 				<article class="figure-special">
 					<figure >
-						<img src="img/varsava.jpg" alt="varsava"/>
+						<img src="assets/img/varsava.jpg" alt="varsava"/>
 						<figcaption>Varšava</figcaption>
 					</figure>
 					<div class="back">
@@ -62,7 +62,7 @@
 				</article>	
 				<article class="figure-special">
 					<figure>
-						<img src="img/moskva.jpg" alt="moskva"/>
+						<img src="assets/img/moskva.jpg" alt="moskva"/>
 						<figcaption>Moskva</figcaption>
 					</figure>
 					<div class="back">
@@ -84,7 +84,7 @@
 				</article>	
 				<article class="figure-special">
 					<figure >
-						<img src="img/bec.jpg" alt="bec"/>
+						<img src="assets/img/bec.jpg" alt="bec"/>
 						<figcaption>Beč</figcaption>
 					</figure>
 					<div class="back">
@@ -109,7 +109,7 @@
 				<div class="wrapper">
 					<section class="splitting-layout">
 						<div class="img-holder-50">
-								<img class="bali"src="img/bali.jpeg" alt="bali"/>
+								<img class="bali"src="assets/img/bali.jpeg" alt="bali"/>
 						</div>
 							<article class="text-holder">
 								<h5>Putovanje na Bali je nikad bliže!</h5> 
