--- a/oAutoru.html
+++ b/oAutoru.html
@@ -44,7 +44,7 @@
 						Pohađao sam Gimnaziju "Vuk Karadžić". Trenutno sam na studijama u Beogradu na Visokoj ICT, smer internet tehnologije.
 					</p>
 					<p>
-						Volim da gledam serije i igram igrice.
+						Volim da gledam serije i igram igrice u slobodno vreme.
 					</p>
 					<p>
 						Index: 
