--- a/prijava.html
+++ b/prijava.html
@@ -33,19 +33,19 @@
                   <h2>Prijava za putovanje</h2>
                   <div class="formular-group">
                     <label for="ime">Ime:</label>
-                    <input class="formular-input" type="text" id="ime" name="ime" placeholder="Ovde unesite Vaše ime" required>
+                    <input class="formular-input" type="text" id="ime" name="ime" placeholder="Ovde unesite Vaše ime" required/>
                   </div>
                   <div class="formular-group">
                     <label for="prezime">Prezime:</label>
-                    <input class="formular-input" type="text" id="prezime" name="prezime" placeholder="Ovde unesite Vaše prezime" required>
+                    <input class="formular-input" type="text" id="prezime" name="prezime" placeholder="Ovde unesite Vaše prezime" required/>
                   </div>
                   <div class="formular-group-email">
                     <label for="email">E-mail:</label>
-                    <input class="formular-input" type="email" id="email" name="email" placeholder="Ovde unesite Vaš E-mail" required>
+                    <input class="formular-input" type="email" id="email" name="email" placeholder="Ovde unesite Vaš E-mail" required/>
                   </div>
                   <div class="formular-group">
                     <label for="telefon">Broj telefona:</label>
-                    <input class="formular-input" type="tel" id="telefon" name="telefon" placeholder="Ovde unesite Vaš broj telefona" required>
+                    <input class="formular-input" type="tel" id="telefon" name="telefon" placeholder="Ovde unesite Vaš broj telefona" required/>
                   </div>
                   <div class="formular-group">
                     <label for="people">Broj osoba:</label>
